Metaprogramming/Antrl/Capl_grammar/capl-g4/grammar/.antlr/CaplParser.java
// Generated from d:\Projects\dotNET\appDev-NET\Metaprogramming\Antrl\Capl_grammar\capl-g4\grammar\Capl.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CaplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, StopMeasurement=2, Start=3, ErrorFrame=4, Key=5, On=6, Variables=7, 
		Break=8, Case=9, Char=10, Byte=11, Continue=12, Default=13, Do=14, Double=15, 
		Else=16, Float=17, For=18, If=19, Int=20, Word=21, Dword=22, Message=23, 
		EnvVar=24, Timer=25, MsTimer=26, Long=27, Int64=28, Return=29, Switch=30, 
		Void=31, While=32, LeftParen=33, RightParen=34, LeftBracket=35, RightBracket=36, 
		LeftBrace=37, RightBrace=38, Less=39, LessEqual=40, Greater=41, GreaterEqual=42, 
		LeftShift=43, RightShift=44, Plus=45, PlusPlus=46, Minus=47, MinusMinus=48, 
		Div=49, Mod=50, And=51, Or=52, AndAnd=53, OrOr=54, Caret=55, Not=56, Tilde=57, 
		Question=58, Colon=59, Semi=60, Comma=61, Assign=62, StarAssign=63, DivAssign=64, 
		ModAssign=65, PlusAssign=66, MinusAssign=67, LeftShiftAssign=68, RightShiftAssign=69, 
		AndAssign=70, XorAssign=71, OrAssign=72, Star=73, Equal=74, NotEqual=75, 
		Ellipsis=76, F1=77, F2=78, F3=79, F4=80, F5=81, F6=82, F7=83, F8=84, F9=85, 
		F10=86, F11=87, F12=88, Identifier=89, This=90, Dot=91, Constant=92, DigitSequence=93, 
		StringLiteral=94, IncludeDirective=95, Whitespace=96, Newline=97, BlockComment=98, 
		LineComment=99;
	public static final int
		RULE_primaryExpression = 0, RULE_startBlock = 1, RULE_variableBlock = 2, 
		RULE_eventBlock = 3, RULE_timerBlock = 4, RULE_errorFrame = 5, RULE_messageBlock = 6, 
		RULE_stopMeasurement = 7, RULE_envBlock = 8, RULE_postfixExpression = 9, 
		RULE_argumentExpressionList = 10, RULE_unaryExpression = 11, RULE_unaryOperator = 12, 
		RULE_castExpression = 13, RULE_multiplicativeExpression = 14, RULE_additiveExpression = 15, 
		RULE_shiftExpression = 16, RULE_relationalExpression = 17, RULE_equalityExpression = 18, 
		RULE_andExpression = 19, RULE_exclusiveOrExpression = 20, RULE_inclusiveOrExpression = 21, 
		RULE_logicalAndExpression = 22, RULE_logicalOrExpression = 23, RULE_conditionalExpression = 24, 
		RULE_assignmentExpression = 25, RULE_assignmentOperator = 26, RULE_expression = 27, 
		RULE_constantExpression = 28, RULE_declaration = 29, RULE_declarationSpecifiers = 30, 
		RULE_declarationSpecifiers2 = 31, RULE_declarationSpecifier = 32, RULE_initDeclaratorList = 33, 
		RULE_initDeclarator = 34, RULE_typeSpecifier = 35, RULE_specifierQualifierList = 36, 
		RULE_declarator = 37, RULE_directDeclarator = 38, RULE_nestedParenthesesBlock = 39, 
		RULE_parameterTypeList = 40, RULE_parameterList = 41, RULE_parameterDeclaration = 42, 
		RULE_identifierList = 43, RULE_typeName = 44, RULE_abstractDeclarator = 45, 
		RULE_directAbstractDeclarator = 46, RULE_initializer = 47, RULE_initializerList = 48, 
		RULE_designation = 49, RULE_designatorList = 50, RULE_designator = 51, 
		RULE_statement = 52, RULE_labeledStatement = 53, RULE_compoundStatement = 54, 
		RULE_blockItemList = 55, RULE_blockItem = 56, RULE_expressionStatement = 57, 
		RULE_selectionStatement = 58, RULE_iterationStatement = 59, RULE_forCondition = 60, 
		RULE_forDeclaration = 61, RULE_forExpression = 62, RULE_jumpStatement = 63, 
		RULE_compilationUnit = 64, RULE_translationUnit = 65, RULE_externalDeclaration = 66, 
		RULE_functionDefinition = 67, RULE_declarationList = 68, RULE_messageType = 69, 
		RULE_keyEventType = 70;
	private static String[] makeRuleNames() {
		return new String[] {
			"primaryExpression", "startBlock", "variableBlock", "eventBlock", "timerBlock", 
			"errorFrame", "messageBlock", "stopMeasurement", "envBlock", "postfixExpression", 
			"argumentExpressionList", "unaryExpression", "unaryOperator", "castExpression", 
			"multiplicativeExpression", "additiveExpression", "shiftExpression", 
			"relationalExpression", "equalityExpression", "andExpression", "exclusiveOrExpression", 
			"inclusiveOrExpression", "logicalAndExpression", "logicalOrExpression", 
			"conditionalExpression", "assignmentExpression", "assignmentOperator", 
			"expression", "constantExpression", "declaration", "declarationSpecifiers", 
			"declarationSpecifiers2", "declarationSpecifier", "initDeclaratorList", 
			"initDeclarator", "typeSpecifier", "specifierQualifierList", "declarator", 
			"directDeclarator", "nestedParenthesesBlock", "parameterTypeList", "parameterList", 
			"parameterDeclaration", "identifierList", "typeName", "abstractDeclarator", 
			"directAbstractDeclarator", "initializer", "initializerList", "designation", 
			"designatorList", "designator", "statement", "labeledStatement", "compoundStatement", 
			"blockItemList", "blockItem", "expressionStatement", "selectionStatement", 
			"iterationStatement", "forCondition", "forDeclaration", "forExpression", 
			"jumpStatement", "compilationUnit", "translationUnit", "externalDeclaration", 
			"functionDefinition", "declarationList", "messageType", "keyEventType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'qword'", "'stopMeasurement'", "'start'", "'errorFrame'", "'key'", 
			"'on'", "'variables'", "'break'", "'case'", "'char'", "'byte'", "'continue'", 
			"'default'", "'do'", "'double'", "'else'", "'float'", "'for'", "'if'", 
			"'int'", "'word'", "'dword'", "'message'", "'envVar'", "'timer'", "'msTimer'", 
			"'long'", "'int64'", "'return'", "'switch'", "'void'", "'while'", "'('", 
			"')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", 
			"'>>'", "'+'", "'++'", "'-'", "'--'", "'/'", "'%'", "'&'", "'|'", "'&&'", 
			"'||'", "'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", "'='", "'*='", 
			"'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", 
			"'*'", "'=='", "'!='", "'...'", "'F1'", "'F2'", "'F3'", "'F4'", "'F5'", 
			"'F6'", "'F7'", "'F8'", "'F9'", "'F10'", "'F11'", "'F12'", null, "'this'", 
			"'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "StopMeasurement", "Start", "ErrorFrame", "Key", "On", "Variables", 
			"Break", "Case", "Char", "Byte", "Continue", "Default", "Do", "Double", 
			"Else", "Float", "For", "If", "Int", "Word", "Dword", "Message", "EnvVar", 
			"Timer", "MsTimer", "Long", "Int64", "Return", "Switch", "Void", "While", 
			"LeftParen", "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
			"RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", "LeftShift", 
			"RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", "Div", "Mod", 
			"And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", "Question", "Colon", 
			"Semi", "Comma", "Assign", "StarAssign", "DivAssign", "ModAssign", "PlusAssign", 
			"MinusAssign", "LeftShiftAssign", "RightShiftAssign", "AndAssign", "XorAssign", 
			"OrAssign", "Star", "Equal", "NotEqual", "Ellipsis", "F1", "F2", "F3", 
			"F4", "F5", "F6", "F7", "F8", "F9", "F10", "F11", "F12", "Identifier", 
			"This", "Dot", "Constant", "DigitSequence", "StringLiteral", "IncludeDirective", 
			"Whitespace", "Newline", "BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Capl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CaplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrimaryExpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(CaplParser.Identifier, 0); }
		public TerminalNode Constant() { return getToken(CaplParser.Constant, 0); }
		public List<TerminalNode> StringLiteral() { return getTokens(CaplParser.StringLiteral); }
		public TerminalNode StringLiteral(int i) {
			return getToken(CaplParser.StringLiteral, i);
		}
		public TerminalNode LeftParen() { return getToken(CaplParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(CaplParser.RightParen, 0); }
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public List<VariableBlockContext> variableBlock() {
			return getRuleContexts(VariableBlockContext.class);
		}
		public VariableBlockContext variableBlock(int i) {
			return getRuleContext(VariableBlockContext.class,i);
		}
		public List<EventBlockContext> eventBlock() {
			return getRuleContexts(EventBlockContext.class);
		}
		public EventBlockContext eventBlock(int i) {
			return getRuleContext(EventBlockContext.class,i);
		}
		public List<TimerBlockContext> timerBlock() {
			return getRuleContexts(TimerBlockContext.class);
		}
		public TimerBlockContext timerBlock(int i) {
			return getRuleContext(TimerBlockContext.class,i);
		}
		public List<ErrorFrameContext> errorFrame() {
			return getRuleContexts(ErrorFrameContext.class);
		}
		public ErrorFrameContext errorFrame(int i) {
			return getRuleContext(ErrorFrameContext.class,i);
		}
		public List<EnvBlockContext> envBlock() {
			return getRuleContexts(EnvBlockContext.class);
		}
		public EnvBlockContext envBlock(int i) {
			return getRuleContext(EnvBlockContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public List<StartBlockContext> startBlock() {
			return getRuleContexts(StartBlockContext.class);
		}
		public StartBlockContext startBlock(int i) {
			return getRuleContext(StartBlockContext.class,i);
		}
		public List<MessageBlockContext> messageBlock() {
			return getRuleContexts(MessageBlockContext.class);
		}
		public MessageBlockContext messageBlock(int i) {
			return getRuleContext(MessageBlockContext.class,i);
		}
		public List<StopMeasurementContext> stopMeasurement() {
			return getRuleContexts(StopMeasurementContext.class);
		}
		public StopMeasurementContext stopMeasurement(int i) {
			return getRuleContext(StopMeasurementContext.class,i);
		}
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primaryExpression);
		int _la;
		try {
			int _alt;
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(Constant);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(144);
					match(StringLiteral);
					}
					}
					setState(147); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==StringLiteral );
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				match(LeftParen);
				setState(150);
				expression();
				setState(151);
				match(RightParen);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(153);
				match(LeftParen);
				setState(154);
				compoundStatement();
				setState(155);
				match(RightParen);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(166); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						setState(166);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
						case 1:
							{
							setState(157);
							variableBlock();
							}
							break;
						case 2:
							{
							setState(158);
							eventBlock();
							}
							break;
						case 3:
							{
							setState(159);
							timerBlock();
							}
							break;
						case 4:
							{
							setState(160);
							errorFrame();
							}
							break;
						case 5:
							{
							setState(161);
							envBlock();
							}
							break;
						case 6:
							{
							setState(162);
							functionDefinition();
							}
							break;
						case 7:
							{
							setState(163);
							startBlock();
							}
							break;
						case 8:
							{
							setState(164);
							messageBlock();
							}
							break;
						case 9:
							{
							setState(165);
							stopMeasurement();
							}
							break;
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(168); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartBlockContext extends ParserRuleContext {
		public TerminalNode On() { return getToken(CaplParser.On, 0); }
		public TerminalNode Start() { return getToken(CaplParser.Start, 0); }
		public TerminalNode LeftBrace() { return getToken(CaplParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(CaplParser.RightBrace, 0); }
		public BlockItemListContext blockItemList() {
			return getRuleContext(BlockItemListContext.class,0);
		}
		public StartBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startBlock; }
	}

	public final StartBlockContext startBlock() throws RecognitionException {
		StartBlockContext _localctx = new StartBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_startBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(On);
			setState(173);
			match(Start);
			setState(174);
			match(LeftBrace);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << On) | (1L << Variables) | (1L << Break) | (1L << Case) | (1L << Char) | (1L << Byte) | (1L << Continue) | (1L << Default) | (1L << Do) | (1L << Double) | (1L << Float) | (1L << For) | (1L << If) | (1L << Int) | (1L << Word) | (1L << Dword) | (1L << Message) | (1L << Timer) | (1L << MsTimer) | (1L << Long) | (1L << Int64) | (1L << Return) | (1L << Switch) | (1L << Void) | (1L << While) | (1L << LeftParen) | (1L << LeftBrace) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Not) | (1L << Tilde) | (1L << Semi))) != 0) || ((((_la - 89)) & ~0x3f) == 0 && ((1L << (_la - 89)) & ((1L << (Identifier - 89)) | (1L << (Constant - 89)) | (1L << (DigitSequence - 89)) | (1L << (StringLiteral - 89)))) != 0)) {
				{
				setState(175);
				blockItemList();
				}
			}

			setState(178);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableBlockContext extends ParserRuleContext {
		public TerminalNode Variables() { return getToken(CaplParser.Variables, 0); }
		public TerminalNode LeftBrace() { return getToken(CaplParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(CaplParser.RightBrace, 0); }
		public BlockItemListContext blockItemList() {
			return getRuleContext(BlockItemListContext.class,0);
		}
		public VariableBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableBlock; }
	}

	public final VariableBlockContext variableBlock() throws RecognitionException {
		VariableBlockContext _localctx = new VariableBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(Variables);
			setState(181);
			match(LeftBrace);
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << On) | (1L << Variables) | (1L << Break) | (1L << Case) | (1L << Char) | (1L << Byte) | (1L << Continue) | (1L << Default) | (1L << Do) | (1L << Double) | (1L << Float) | (1L << For) | (1L << If) | (1L << Int) | (1L << Word) | (1L << Dword) | (1L << Message) | (1L << Timer) | (1L << MsTimer) | (1L << Long) | (1L << Int64) | (1L << Return) | (1L << Switch) | (1L << Void) | (1L << While) | (1L << LeftParen) | (1L << LeftBrace) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Not) | (1L << Tilde) | (1L << Semi))) != 0) || ((((_la - 89)) & ~0x3f) == 0 && ((1L << (_la - 89)) & ((1L << (Identifier - 89)) | (1L << (Constant - 89)) | (1L << (DigitSequence - 89)) | (1L << (StringLiteral - 89)))) != 0)) {
				{
				setState(182);
				blockItemList();
				}
			}

			setState(185);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
